--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <div class="menu">
             <!-- Товары -->
             <div class="card">
+                <img src="images/lit_energy.jpg" alt="Lit Energy">
                 <p>Lit Energy</p>
                 <span class="price">120₽</span>
                 <div class="controls">
@@ -24,6 +25,7 @@
                 </div>
             </div>
             <div class="card">
+                <img src="images/adrenaline_449.jpg" alt="Adrenaline Rush 0.449">
                 <p>Adrenaline Rush 0.449</p>
                 <span class="price">140₽</span>
                 <div class="controls">
@@ -33,6 +35,7 @@
                 </div>
             </div>
             <div class="card">
+                <img src="images/adrenaline_25.jpg" alt="Adrenaline Rush 0.25">
                 <p>Adrenaline Rush 0.25</p>
                 <span class="price">100₽</span>
                 <div class="controls">
@@ -42,6 +45,7 @@
                 </div>
             </div>
             <div class="card">
+                <img src="images/bulka_mak.jpg" alt="Булка с маком">
                 <p>Булка с маком</p>
                 <span class="price">70₽</span>
                 <div class="controls">
@@ -51,6 +55,7 @@
                 </div>
             </div>
             <div class="card">
+                <img src="images/bulka_korica.jpg" alt="Булка с корицей">
                 <p>Булка с корицей</p>
                 <span class="price">70₽</span>
                 <div class="controls">
@@ -60,6 +65,7 @@
                 </div>
             </div>
             <div class="card">
+                <img src="images/pizza.jpg" alt="Пицца">
                 <p>Пицца</p>
                 <span class="price">220₽</span>
                 <div class="controls">
@@ -70,9 +76,10 @@
             </div>
         </div>
 
-        <button id="view-order" class="view-order">Показать заказ</button>
+        <button id="view-order" class="view-order">Отправить заказ</button>
     </div>
 
     <script src="app.js"></script>
 </body>
 </html>
+
