--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="menu">
             <!-- Товары -->
             <div class="card">
-                <img src="images/lit_energy.jpg" alt="Lit Energy">
+                <img src="images/7204725016.png" alt="Lit Energy">
                 <p>Lit Energy</p>
                 <span class="price">120₽</span>
                 <div class="controls">
@@ -25,7 +25,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="images/adrenaline_449.jpg" alt="Adrenaline Rush 0.449">
+                <img src="images/fff.png" alt="Adrenaline Rush 0.449">
                 <p>Adrenaline Rush 0.449</p>
                 <span class="price">140₽</span>
                 <div class="controls">
@@ -35,7 +35,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="images/adrenaline_25.jpg" alt="Adrenaline Rush 0.25">
+                <img src="images/ffff.png" alt="Adrenaline Rush 0.25">
                 <p>Adrenaline Rush 0.25</p>
                 <span class="price">100₽</span>
                 <div class="controls">
@@ -45,7 +45,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="images/bulka_mak.jpg" alt="Булка с маком">
+                <img src="images/i.png" alt="Булка с маком">
                 <p>Булка с маком</p>
                 <span class="price">70₽</span>
                 <div class="controls">
@@ -55,7 +55,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="images/bulka_korica.jpg" alt="Булка с корицей">
+                <img src="images/i.png" alt="Булка с корицей">
                 <p>Булка с корицей</p>
                 <span class="price">70₽</span>
                 <div class="controls">
@@ -65,7 +65,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="images/pizza.jpg" alt="Пицца">
+                <img src="images/pizza.png" alt="Пицца">
                 <p>Пицца</p>
                 <span class="price">220₽</span>
                 <div class="controls">
